tests/baselines/reference/genericRecursiveImplicitConstructorErrors1.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
genericRecursiveImplicitConstructorErrors1.ts(9,49): error TS2314: Generic type 'PullTypeSymbol<A, B, C>' requires 3 type argument(s).


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== genericRecursiveImplicitConstructorErrors1.ts (1 errors) ====
    export declare namespace TypeScript {
      class PullSymbol { }
      class PullSignatureSymbol <A,B,C> extends PullSymbol {
      public addSpecialization<A,B,C>(signature: PullSignatureSymbol<A,B,C>, typeArguments: PullTypeSymbol<any,any,any>[]): void;
      }
      class PullTypeSymbol <A,B,C> extends PullSymbol {
        public findTypeParameter<A,B,C>(name: string): PullTypeParameterSymbol<A,B,C>;
      }
      class PullTypeParameterSymbol <A,B,C> extends PullTypeSymbol {
                                                    ~~~~~~~~~~~~~~
!!! error TS2314: Generic type 'PullTypeSymbol<A, B, C>' requires 3 type argument(s).
      }
    }
     
    